# test-builds

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  README.rst  antora-playbook.yml  app.js  environment.yaml  environment.yml  fetch  index.asciidoc  index.html  index.py  llms.txt  mkdocs.yml  package-lock.json  package.json  project.tf  pyproject.toml  readthedocs-build.yaml  readthedocs.yaml  readthedocs.yml  requirements.txt  send  setup.py  webpack.config.js  zensical.toml
$HOME/: conf.py
&& ls -al && /: index.rst
. && ls -al && /: contents.rst
_posts/: 2024-03-04-welcome-to-jekyll.markdown
assets/javascript/: readthedocs.js
docs/: 02-notebook.ipynb  3D Plot.ipynb  404.rst  README.md  book.toml  c++-api.rst  conf.py  conf.py.rst  conf.rst  contents.rst  docusaurus.config.js  environment-variables.rst  environment.yml  extra.md  file-with'apostrophe.rst  glossary.rst  hoverxref.rst  index.html  index.md  index.rst  instant.md  jsdoc.rst  latest-aliases.rst  llms-txt.rst  markdownfile.md  mathjax.rst  mermaid.md  mkdocs.yml  more?to(encode)&decode:rst.rst  myst.yml  new.rst  next.config.js  notfound-page.rst  package-lock.json  package.json  path with spaces.rst  path-'one'-encode.rst  pelicanconf.py  profiling_examples.py  pygments.rst  (+16 more)
docs/.vitepress/: config.mts
docusaurus/: docusaurus.config.js
gh-workflows/: sphinx-build.yml
project1/: .readthedocs.yaml  conf.py  index.rst  requirements.txt
project2/: .readthedocs.yaml  conf.py  index.rst  requirements.txt
src/: FundController.apxc  actions.js
(+24 files in other folders)
